--- a/company/css/index_css.css
+++ b/company/css/index_css.css
@@ -46,6 +46,15 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+img{
+		border: 0;
+		padding: 0;
+		margin:0;
+	}
+body{
+		margin: 0;
+		height: 100%;
+	}
 /*
  	 以上reset_css
 */
